--- a/src/layout/mainfooter.html
+++ b/src/layout/mainfooter.html
@@ -1,3 +1,7 @@
 <div class="panel panel-default">
-        <div class="panel-footer">Panel Footer</div>
+        <div class="panel-footer">
+            <h4>Copyright Information</h4>
+            <div>This is footer component.</div>
+        </div>
+
 </div>
