--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,3 @@
 <main-header></main-header>
-<product></product>
+<!--<product></product> --> <!-- Keeping products as routes in Nav bar on home page -->
 <main-footer></main-footer>
