--- a/src/layout/mainheader.html
+++ b/src/layout/mainheader.html
@@ -2,4 +2,19 @@
         <div class="panel-header">
             <h1>My Shopping Cart</h1>
         </div>
+        <div>
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <a class="navbar navbar-brand">MyShop</a>
+                    <ul class="nav navbar-nav">
+                        <li><a [routerLink]="['/home']">Home</a></li>
+                        <li><a [routerLink]="['/orders']">Orders</a></li>
+                        <li><a [routerLink]="['/products']">Products</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="container">
+                <router-outlet></router-outlet>
+            </div> 
+        </div>
 </div>
