--- a/src/product/product.component.html
+++ b/src/product/product.component.html
@@ -35,7 +35,7 @@
                         <tbody *ngIf="isGridView">
                             <tr *ngFor="let product of products|productFilter:filterProduct">
                                      <td><img [src]="product.imageUrl"  *ngIf="showImage" [style.width.px]="imgWidth"/></td>
-                                     <td>{{product.productName|uppercase}}</td>
+                                     <td><a [routerLink]="['/products',product.productId]" [queryParams]="{name:product.productName,img:product.imageUrl}" >{{product.productName|uppercase}}</a></td>
                                      <td>{{product.productCode|lowercase}}</td>
                                      <td>{{product.releaseDate|date}}</td>
                                      <td>{{product.price|currency:"INR"}}</td>
